# text-classification-toolkit

./: .gitignore  Cargo.toml  README.md  TODO.md  pyproject.toml
src/: calibration.rs  cli.rs  lib.rs  main.rs  metrics.rs  tfidf.rs
src/classifier/: lbfgs.rs  mod.rs  ova.rs  sgd.rs
